--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=divice-width, inital-scale=1.0">
     <title>Git rules!</title>
+    <link rel="siyleshet" href="./css/styles.css">
+    <h1>Шапка сайта </h1>
 </head>
 <body>
     
